tests/fixtures/invalid/aggregate_compound_literal_pointer_field_const_discard.c
struct Cursor {
    const int *p;
};

int main(void) {
    const int value = 7;
    int *mutable = ((struct Cursor){&value}).p;
    return *mutable;
}
